// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flair snapshot color green 1`] = `
<span
  class="component green size_sm"
>
  green
</span>
`;

exports[`Flair snapshot color orange 1`] = `
<span
  class="component orange size_sm"
>
  orange
</span>
`;

exports[`Flair snapshot color red 1`] = `
<span
  class="component red size_sm"
>
  red
</span>
`;

exports[`Flair snapshot default 1`] = `
<span
  class="component blue size_sm"
>
  blue default
</span>
`;

exports[`Flair snapshot size md 1`] = `
<span
  class="component blue size_md"
>
  md size
</span>
`;

exports[`Flair snapshot size sm 1`] = `
<span
  class="component blue size_sm"
>
  sm size
</span>
`;

exports[`Flair snapshot size xs 1`] = `
<span
  class="component blue size_xs"
>
  xs size
</span>
`;
